fix(1815): color contrast adjusted for comments in code blocks

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body.no-scroll{
   overflow: hidden;
 }
 
+body .language-js .highlight .c1 {
+  color: green;
+}
+
 h1 {
   font-size: 30px;
   line-height: 36px;
